[gd_scene load_steps=21 format=4 uid="uid://bnn4b0rgwk01u"]

[ext_resource type="Script" uid="uid://bh84lf63mkvt1" path="res://Scripts/blue_level.gd" id="1_2qp8m"]
[ext_resource type="Texture2D" uid="uid://cfwvspur5gujh" path="res://Assets/Tiles/NeonTiles1.png" id="1_cmvyr"]
[ext_resource type="PackedScene" uid="uid://hoijxi2wf30j" path="res://Entities/player.tscn" id="2_ba1x8"]
[ext_resource type="Shader" uid="uid://bt8c0o60iaqbi" path="res://shaders/background_fade.gdshader" id="2_p6lqu"]
[ext_resource type="Theme" uid="uid://7f1mjuvnxm8i" path="res://default_theme.tres" id="3_o7qq8"]
[ext_resource type="Texture2D" uid="uid://bl12rpuwjntfh" path="res://Assets/Backgrounds/New_York_City_at_night_HDR-pixel.png" id="3_va73c"]
[ext_resource type="Texture2D" uid="uid://bv8dexcdlp33n" path="res://Assets/Tiles/NeonTiles3.png" id="4_va73c"]
[ext_resource type="Shader" uid="uid://bke4jxdi3333" path="res://shaders/dash.gdshader" id="5_pll7t"]
[ext_resource type="Texture2D" uid="uid://dae7ylvkp8o3c" path="res://Assets/Sprites/Player1.png" id="8_rdk0p"]
[ext_resource type="PackedScene" uid="uid://byefc6m3uoldx" path="res://Entities/level_door.tscn" id="10_3b8sh"]
[ext_resource type="PackedScene" uid="uid://cekodfgoa6n8d" path="res://Entities/qr_teleport.tscn" id="11_2qp8m"]
[ext_resource type="PackedScene" uid="uid://e82xakiyidwq" path="res://Entities/upward_stationary_boost.tscn" id="12_lvnj2"]
[ext_resource type="PackedScene" uid="uid://b11agu7i7x7ky" path="res://Entities/virus_blue.tscn" id="13_txane"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i6f24"]
shader = ExtResource("2_p6lqu")
shader_parameter/speed = 1.0
shader_parameter/darkness = 0.5

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3f2bg"]
texture = ExtResource("4_va73c")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_fr78a"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/1 = SubResource("TileSetAtlasSource_3f2bg")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p6lqu"]
texture = ExtResource("1_cmvyr")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_3b8sh"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_p6lqu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3b8sh"]
resource_local_to_scene = true
shader = ExtResource("5_pll7t")
shader_parameter/hit_effect = 0.0
shader_parameter/shake_intensity = 10.0
shader_parameter/flash_speed = 30.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iuh7d"]
size = Vector2(7551.5, 66)

[node name="BlueLevel" type="Node2D"]
script = ExtResource("1_2qp8m")

[node name="Background" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.2, 0.2)

[node name="Sprite2D" type="Sprite2D" parent="Background"]
material = SubResource("ShaderMaterial_i6f24")
position = Vector2(1456, -120)
scale = Vector2(3.1775, 3.1775)
texture = ExtResource("3_va73c")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAAoAAQAAAAAAAAABAAoAAQAAAAAAAAACAAoAAQAAAAAAAAADAAoAAQAAAAAAAAAEAAoAAQAAAAAAAAAFAAoAAQAAAAAAAAAGAAoAAQAAAAAAAAAHAAoAAQAAAAAAAAAIAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAKAAoAAQAAAAAAAAALAAoAAQAAAAAAAAAMAAoAAQAAAAAAAAANAAoAAQAAAAAAAAAOAAoAAQAAAAAAAAAPAAoAAQAAAAAAAAAQAAoAAQAAAAAAAAARAAoAAQAAAAAAAAASAAoAAQAAAAAAAAATAAoAAQACAAMAAAAUAAoAAQAAAAAAAAD//wAAAQACAAMAAAD//wEAAQACAAEAAAD//wIAAQACAAEAAAD//wMAAQACAAEAAAD//wQAAQACAAEAAAD//wUAAQACAAEAAAD//wYAAQACAAEAAAD//wcAAQACAAEAAAD//wgAAQACAAEAAAD//wkAAQACAAEAAAD//woAAQAEAAIAAAD//wsAAQACAAMAAAAAAAsAAQACAAMAAAABAAsAAQACAAMAAAACAAsAAQACAAMAAAADAAsAAQACAAMAAAAEAAsAAQACAAMAAAAFAAsAAQACAAMAAAAGAAsAAQACAAMAAAAHAAsAAQACAAMAAAAIAAsAAQACAAMAAAAJAAsAAQACAAMAAAAKAAsAAQACAAMAAAALAAsAAQACAAMAAAAMAAsAAQACAAMAAAANAAsAAQACAAMAAAAOAAsAAQACAAMAAAAPAAsAAQACAAMAAAAQAAsAAQACAAMAAAARAAsAAQACAAMAAAASAAsAAQACAAMAAAATAAsAAQACAAMAAAAUAAsAAQACAAMAAAAbAAoAAQAAAAAAAAAcAAoAAQAAAAAAAAAdAAoAAQAAAAAAAAAeAAoAAQAAAAAAAAAfAAoAAQAAAAAAAAAgAAoAAQAAAAAAAAAhAAoAAQAAAAAAAAAiAAoAAQAAAAAAAAAjAAoAAQACAAAAAAAbAAsAAQACAAMAAAAcAAsAAQACAAMAAAAdAAsAAQACAAMAAAAeAAsAAQACAAMAAAAfAAsAAQACAAMAAAAgAAsAAQACAAMAAAAhAAsAAQACAAMAAAAiAAsAAQACAAMAAAAjAAsAAQACAAEAAAAVAAoAAQAAAAAAAAAWAAoAAQAAAAAAAAAXAAoAAQAAAAAAAAAYAAoAAQAAAAAAAAAZAAoAAQAAAAAAAAAaAAoAAQAAAAAAAAAVAAsAAQACAAMAAAAWAAsAAQACAAMAAAAXAAsAAQACAAMAAAAYAAsAAQACAAMAAAAZAAsAAQACAAMAAAAaAAsAAQACAAMAAAAKAAgAAQAAAAMAAAATAAAAAQACAAAAAAATAAEAAQADAAIAAAATAAIAAQADAAIAAAATAAMAAQADAAIAAAATAAQAAQADAAIAAAATAAUAAQADAAIAAAATAAYAAQADAAIAAAATAAcAAQADAAIAAAATAAgAAQADAAIAAAATAAkAAQADAAIAAAAWAAgAAQAAAAMAAAAJAAcAAQACAAMAAAAJAAgAAQACAAMAAAAJAAkAAQACAAMAAAAKAAkAAQACAAMAAAALAAkAAQACAAMAAAALAAgAAQACAAMAAAALAAcAAQACAAMAAAAKAAcAAQACAAMAAAAVAAcAAQACAAMAAAAVAAgAAQACAAMAAAAVAAkAAQACAAMAAAAWAAkAAQACAAMAAAAXAAkAAQACAAMAAAAXAAgAAQACAAMAAAAXAAcAAQACAAMAAAAWAAcAAQACAAMAAAAaAAMAAQADAAAAAAAbAAMAAQAEAAAAAAAcAAMAAQAEAAAAAAAdAAMAAQAEAAAAAAAeAAMAAQAEAAAAAAAfAAMAAQAEAAAAAAAgAAMAAQAFAAAAAAACAAAAAQAEAAAAAAABAAAAAQAEAAAAAAAAAAAAAQAEAAAAAAADAAAAAQAEAAAAAAAEAAAAAQAEAAAAAAAFAAAAAQAEAAAAAAAGAAAAAQAEAAAAAAAHAAAAAQAEAAAAAAAIAAAAAQAEAAAAAAAJAAAAAQAEAAAAAAAKAAAAAQAEAAAAAAALAAAAAQAEAAAAAAAMAAAAAQAEAAAAAAANAAAAAQAEAAAAAAAOAAAAAQAEAAAAAAAPAAAAAQAEAAAAAAAQAAAAAQAEAAAAAAARAAAAAQAEAAAAAAASAAAAAQAEAAAAAAD/////AQACAAEAAAD///7/AQACAAEAAAD///3/AQACAAEAAAD///z/AQACAAEAAAD///v/AQACAAEAAAD///r/AQACAAEAAAD///n/AQACAAEAAAD///j/AQACAAEAAAD///f/AQACAAEAAAAAAPb/AQAEAAAAAAABAPb/AQAEAAAAAAACAPb/AQAEAAAAAAADAPb/AQAEAAAAAAAEAPb/AQAEAAAAAAAFAPb/AQAEAAAAAAAGAPb/AQAEAAAAAAAHAPb/AQAEAAAAAAAIAPb/AQAEAAAAAAAJAPb/AQAEAAAAAAAKAPb/AQAEAAAAAAALAPb/AQAEAAAAAAAMAPb/AQAEAAAAAAANAPb/AQAEAAAAAAAOAPb/AQAEAAAAAAAPAPb/AQAEAAAAAAAQAPb/AQAEAAAAAAARAPb/AQAEAAAAAAASAPb/AQAEAAAAAAACAP3/AQAAAAMAAAABAP7/AQACAAMAAAACAP7/AQACAAMAAAADAP7/AQACAAMAAAADAP3/AQACAAMAAAADAPz/AQACAAMAAAACAPz/AQACAAMAAAABAPz/AQACAAMAAAABAP3/AQACAAMAAAATAPb/AQAFAAAAAAD///X/AQACAAEAAAD///T/AQACAAEAAAD///P/AQACAAEAAAD///L/AQACAAEAAAD///H/AQACAAEAAAD///D/AQACAAEAAAD//+//AQACAAEAAAD//+7/AQACAAEAAAD//+3/AQACAAEAAAAAAOz/AQAEAAAAAAABAOz/AQAEAAAAAAACAOz/AQAEAAAAAAADAOz/AQAEAAAAAAAEAOz/AQAEAAAAAAAFAOz/AQAEAAAAAAAGAOz/AQAEAAAAAAAHAOz/AQAEAAAAAAAIAOz/AQAEAAAAAAAJAOz/AQAEAAAAAAAKAOz/AQAEAAAAAAALAOz/AQAEAAAAAAAMAOz/AQAEAAAAAAANAOz/AQAEAAAAAAAOAOz/AQAEAAAAAAAPAOz/AQAEAAAAAAAQAOz/AQAEAAAAAAARAOz/AQAEAAAAAAASAOz/AQAEAAAAAAATAOz/AQAFAAAAAAA6APX/AQAAAAAAAAA5APX/AQABAAAAAAA5APb/AQABAAEAAAA5APf/AQABAAEAAAA5APj/AQABAAEAAAA5APn/AQABAAEAAAA5APr/AQABAAEAAAA5APv/AQABAAEAAAA5APz/AQABAAEAAAA5AP3/AQABAAEAAAA5AP7/AQABAAEAAAA5AP//AQABAAEAAAA5AAAAAQABAAEAAAA5AAEAAQABAAEAAAA5AAIAAQABAAEAAAA5AAMAAQABAAEAAAA5AAQAAQABAAEAAAA5AAUAAQABAAEAAAA5AAYAAQABAAEAAAA5AAcAAQABAAEAAAA5AAgAAQABAAEAAAA5AAkAAQABAAEAAAA5AAoAAQABAAEAAAA5AAsAAQABAAEAAAA6APb/AQACAAMAAAA6APf/AQACAAMAAAA6APj/AQACAAMAAAA6APn/AQACAAMAAAA6APr/AQACAAMAAAA6APv/AQACAAMAAAA6APz/AQACAAMAAAA6AP3/AQACAAMAAAA6AP7/AQACAAMAAAA6AP//AQACAAMAAAA6AAAAAQACAAMAAAA6AAEAAQACAAMAAAA6AAIAAQACAAMAAAA6AAMAAQACAAMAAAA6AAQAAQACAAMAAAA6AAUAAQACAAMAAAA6AAYAAQACAAMAAAA6AAcAAQACAAMAAAA6AAgAAQACAAMAAAA6AAkAAQACAAMAAAA6AAoAAQACAAMAAAA6AAsAAQACAAMAAAA7APb/AQACAAMAAAA7APf/AQACAAMAAAA7APj/AQACAAMAAAA7APn/AQACAAMAAAA7APr/AQACAAMAAAA7APv/AQACAAMAAAA7APz/AQACAAMAAAA7AP3/AQACAAMAAAA7AP7/AQACAAMAAAA7AP//AQACAAMAAAA7AAAAAQACAAMAAAA7AAEAAQACAAMAAAA7AAIAAQACAAMAAAA7AAMAAQACAAMAAAA7AAQAAQACAAMAAAA7AAUAAQACAAMAAAA7AAYAAQACAAMAAAA7AAcAAQACAAMAAAA7AAgAAQACAAMAAAA7AAkAAQACAAMAAAA7AAoAAQACAAMAAAA7AAsAAQACAAMAAAA8APb/AQACAAMAAAA8APf/AQACAAMAAAA8APj/AQACAAMAAAA8APn/AQACAAMAAAA8APr/AQACAAMAAAA8APv/AQACAAMAAAA8APz/AQACAAMAAAA8AP3/AQACAAMAAAA8AP7/AQACAAMAAAA8AP//AQACAAMAAAA8AAAAAQACAAMAAAA8AAEAAQACAAMAAAA8AAIAAQACAAMAAAA8AAMAAQACAAMAAAA8AAQAAQACAAMAAAA8AAUAAQACAAMAAAA8AAYAAQACAAMAAAA8AAcAAQACAAMAAAA8AAgAAQACAAMAAAA8AAkAAQACAAMAAAA8AAoAAQACAAMAAAA8AAsAAQACAAMAAAA9APb/AQACAAMAAAA9APf/AQACAAMAAAA9APj/AQACAAMAAAA9APn/AQACAAMAAAA9APr/AQACAAMAAAA9APv/AQACAAMAAAA9APz/AQACAAMAAAA9AP3/AQACAAMAAAA9AP7/AQACAAMAAAA9AP//AQACAAMAAAA9AAAAAQACAAMAAAA9AAEAAQACAAMAAAA9AAIAAQACAAMAAAA9AAMAAQACAAMAAAA9AAQAAQACAAMAAAA9AAUAAQACAAMAAAA9AAYAAQACAAMAAAA9AAcAAQACAAMAAAA9AAgAAQACAAMAAAA9AAkAAQACAAMAAAA9AAoAAQACAAMAAAA9AAsAAQACAAMAAAA+APb/AQACAAMAAAA+APf/AQACAAMAAAA+APj/AQACAAMAAAA+APn/AQACAAMAAAA+APr/AQACAAMAAAA+APv/AQACAAMAAAA+APz/AQACAAMAAAA+AP3/AQACAAMAAAA+AP7/AQACAAMAAAA+AP//AQACAAMAAAA+AAAAAQACAAMAAAA+AAEAAQACAAMAAAA+AAIAAQACAAMAAAA+AAMAAQACAAMAAAA+AAQAAQACAAMAAAA+AAUAAQACAAMAAAA+AAYAAQACAAMAAAA+AAcAAQACAAMAAAA+AAgAAQACAAMAAAA+AAkAAQACAAMAAAA+AAoAAQACAAMAAAA+AAsAAQACAAMAAAA/APb/AQACAAMAAAA/APf/AQACAAMAAAA/APj/AQACAAMAAAA/APn/AQACAAMAAAA/APr/AQACAAMAAAA/APv/AQACAAMAAAA/APz/AQACAAMAAAA/AP3/AQACAAMAAAA/AP7/AQACAAMAAAA/AP//AQACAAMAAAA/AAAAAQACAAMAAAA/AAEAAQACAAMAAAA/AAIAAQACAAMAAAA/AAMAAQACAAMAAAA/AAQAAQACAAMAAAA/AAUAAQACAAMAAAA/AAYAAQACAAMAAAA/AAcAAQACAAMAAAA/AAgAAQACAAMAAAA/AAkAAQACAAMAAAA/AAoAAQACAAMAAAA/AAsAAQACAAMAAABAAPb/AQACAAMAAABAAPf/AQACAAMAAABAAPj/AQACAAMAAABAAPn/AQACAAMAAABAAPr/AQACAAMAAABAAPv/AQACAAMAAABAAPz/AQACAAMAAABAAP3/AQACAAMAAABAAP7/AQACAAMAAABAAP//AQACAAMAAABAAAAAAQACAAMAAABAAAEAAQACAAMAAABAAAIAAQACAAMAAABAAAMAAQACAAMAAABAAAQAAQACAAMAAABAAAUAAQACAAMAAABAAAYAAQACAAMAAABAAAcAAQACAAMAAABAAAgAAQACAAMAAABAAAkAAQACAAMAAABAAAoAAQACAAMAAABAAAsAAQACAAMAAABBAPb/AQACAAMAAABBAPf/AQACAAMAAABBAPj/AQACAAMAAABBAPn/AQACAAMAAABBAPr/AQACAAMAAABBAPv/AQACAAMAAABBAPz/AQACAAMAAABBAP3/AQACAAMAAABBAP7/AQACAAMAAABBAP//AQACAAMAAABBAAAAAQACAAMAAABBAAEAAQACAAMAAABBAAIAAQACAAMAAABBAAMAAQACAAMAAABBAAQAAQACAAMAAABBAAUAAQACAAMAAABBAAYAAQACAAMAAABBAAcAAQACAAMAAABBAAgAAQACAAMAAABBAAkAAQACAAMAAABBAAoAAQACAAMAAABBAAsAAQACAAMAAABCAPb/AQACAAMAAABCAPf/AQACAAMAAABCAPj/AQACAAMAAABCAPn/AQACAAMAAABCAPr/AQACAAMAAABCAPv/AQACAAMAAABCAPz/AQACAAMAAABCAP3/AQACAAMAAABCAP7/AQACAAMAAABCAP//AQACAAMAAABCAAAAAQACAAMAAABCAAEAAQACAAMAAABCAAIAAQACAAMAAABCAAMAAQACAAMAAABCAAQAAQACAAMAAABCAAUAAQACAAMAAABCAAYAAQACAAMAAABCAAcAAQACAAMAAABCAAgAAQACAAMAAABCAAkAAQACAAMAAABCAAoAAQACAAMAAABCAAsAAQACAAMAAABDAPb/AQACAAEAAABDAPf/AQACAAEAAABDAPj/AQACAAEAAABDAPn/AQACAAEAAABDAPr/AQACAAEAAABDAPv/AQACAAEAAABDAPz/AQACAAEAAABDAP3/AQACAAEAAABDAP7/AQACAAEAAABDAP//AQACAAEAAABDAAAAAQACAAEAAABDAAEAAQACAAEAAABDAAIAAQACAAEAAABDAAMAAQACAAEAAABDAAQAAQACAAEAAABDAAUAAQACAAEAAABDAAYAAQACAAEAAABDAAcAAQACAAEAAABDAAgAAQACAAEAAABDAAkAAQACAAEAAABDAAoAAQACAAEAAABDAAsAAQACAAEAAAA7APX/AQAAAAAAAAA8APX/AQAAAAAAAAA9APX/AQAAAAAAAAA+APX/AQAAAAAAAAA/APX/AQAAAAAAAABAAPX/AQAAAAAAAABBAPX/AQAAAAAAAABCAPX/AQAAAAAAAABDAPX/AQACAAAAAAACAPP/AQAAAAMAAAABAPT/AQACAAMAAAABAPP/AQACAAMAAAABAPL/AQACAAMAAAACAPT/AQACAAMAAAADAPT/AQACAAMAAAADAPL/AQACAAMAAAADAPP/AQACAAMAAAACAPL/AQACAAMAAAAaAPP/AQABAAMAAAAiAPP/AQABAAMAAAAqAPP/AQABAAMAAAAyAPP/AQABAAMAAAAaAPT/AQADAAEAAAAiAPT/AQADAAEAAAAqAPT/AQADAAEAAAAyAPT/AQADAAEAAAAaAPX/AQADAAIAAAAaAPb/AQADAAIAAAAaAPf/AQADAAIAAAAiAPX/AQADAAIAAAAiAPb/AQADAAIAAAAiAPf/AQADAAIAAAAqAPX/AQADAAIAAAAqAPb/AQADAAIAAAAqAPf/AQADAAIAAAAyAPX/AQADAAIAAAAyAPb/AQADAAIAAAAyAPf/AQADAAIAAAAjAAcAAQABAAMAAABLAPX/AQABAAAAAABMAPX/AQAAAAAAAABNAPX/AQAAAAAAAABOAPX/AQACAAAAAABLAPb/AQABAAEAAABMAPb/AQACAAMAAABNAPb/AQACAAMAAABOAPb/AQACAAEAAABLAPf/AQABAAEAAABMAPf/AQACAAMAAABNAPf/AQACAAMAAABOAPf/AQACAAEAAABLAPj/AQABAAEAAABMAPj/AQACAAMAAABNAPj/AQACAAMAAABOAPj/AQACAAEAAABLAPn/AQABAAEAAABMAPn/AQACAAMAAABNAPn/AQACAAMAAABOAPn/AQACAAEAAABLAPr/AQABAAEAAABMAPr/AQACAAMAAABNAPr/AQACAAMAAABOAPr/AQACAAEAAABLAPv/AQABAAEAAABMAPv/AQACAAMAAABNAPv/AQACAAMAAABOAPv/AQACAAEAAABLAPz/AQABAAEAAABMAPz/AQACAAMAAABNAPz/AQACAAMAAABOAPz/AQACAAEAAABLAP3/AQABAAEAAABMAP3/AQACAAMAAABNAP3/AQACAAMAAABOAP3/AQACAAEAAABLAP7/AQABAAEAAABMAP7/AQACAAMAAABNAP7/AQACAAMAAABOAP7/AQACAAEAAABLAP//AQABAAEAAABMAP//AQACAAMAAABNAP//AQACAAMAAABOAP//AQACAAEAAABLAAAAAQABAAEAAABMAAAAAQACAAMAAABNAAAAAQACAAMAAABOAAAAAQACAAEAAABLAAEAAQABAAEAAABMAAEAAQACAAMAAABNAAEAAQACAAMAAABOAAEAAQACAAEAAABLAAIAAQABAAEAAABMAAIAAQACAAMAAABNAAIAAQACAAMAAABOAAIAAQACAAEAAABLAAMAAQABAAEAAABMAAMAAQACAAMAAABNAAMAAQACAAMAAABOAAMAAQACAAEAAABLAAQAAQABAAEAAABMAAQAAQACAAMAAABNAAQAAQACAAMAAABOAAQAAQACAAEAAABLAAUAAQABAAEAAABMAAUAAQACAAMAAABNAAUAAQACAAMAAABOAAUAAQACAAEAAABLAAYAAQABAAEAAABMAAYAAQACAAMAAABNAAYAAQACAAMAAABOAAYAAQACAAEAAABLAAcAAQABAAEAAABMAAcAAQACAAMAAABNAAcAAQACAAMAAABOAAcAAQACAAEAAABLAAgAAQABAAEAAABMAAgAAQACAAMAAABNAAgAAQACAAMAAABOAAgAAQACAAEAAABLAAkAAQABAAEAAABMAAkAAQACAAMAAABNAAkAAQACAAMAAABOAAkAAQACAAEAAABLAAoAAQABAAEAAABMAAoAAQACAAMAAABNAAoAAQACAAMAAABOAAoAAQACAAEAAABLAAsAAQABAAEAAABMAAsAAQACAAMAAABNAAsAAQACAAMAAABOAAsAAQACAAEAAABTAPX/AQABAAAAAABTAPb/AQABAAEAAABTAPf/AQABAAEAAABTAPj/AQABAAEAAABTAPn/AQABAAEAAABTAPr/AQABAAEAAABTAPv/AQABAAEAAABTAPz/AQABAAEAAABTAP3/AQABAAEAAABTAP7/AQABAAEAAABTAP//AQABAAEAAABTAAAAAQABAAEAAABTAAEAAQABAAEAAABTAAIAAQABAAEAAABTAAMAAQABAAEAAABTAAQAAQABAAEAAABTAAUAAQABAAEAAABTAAYAAQABAAEAAABTAAcAAQABAAEAAABTAAgAAQABAAEAAABTAAkAAQABAAEAAABTAAoAAQABAAEAAABTAAsAAQABAAEAAABUAPX/AQAAAAAAAABUAPb/AQACAAMAAABUAPf/AQACAAMAAABUAPj/AQACAAMAAABUAPn/AQACAAMAAABUAPr/AQACAAMAAABUAPv/AQACAAMAAABUAPz/AQACAAMAAABUAP3/AQACAAMAAABUAP7/AQACAAMAAABUAP//AQACAAMAAABUAAAAAQACAAMAAABUAAEAAQACAAMAAABUAAIAAQACAAMAAABUAAMAAQACAAMAAABUAAQAAQACAAMAAABUAAUAAQACAAMAAABUAAYAAQACAAMAAABUAAcAAQACAAMAAABUAAgAAQACAAMAAABUAAkAAQACAAMAAABUAAoAAQACAAMAAABUAAsAAQACAAMAAABVAPX/AQAAAAAAAABVAPb/AQACAAMAAABVAPf/AQACAAMAAABVAPj/AQACAAMAAABVAPn/AQACAAMAAABVAPr/AQACAAMAAABVAPv/AQACAAMAAABVAPz/AQACAAMAAABVAP3/AQACAAMAAABVAP7/AQACAAMAAABVAP//AQACAAMAAABVAAAAAQACAAMAAABVAAEAAQACAAMAAABVAAIAAQACAAMAAABVAAMAAQACAAMAAABVAAQAAQACAAMAAABVAAUAAQACAAMAAABVAAYAAQACAAMAAABVAAcAAQACAAMAAABVAAgAAQACAAMAAABVAAkAAQACAAMAAABVAAoAAQACAAMAAABVAAsAAQACAAMAAABWAPX/AQACAAAAAABWAPb/AQACAAEAAABWAPf/AQACAAEAAABWAPj/AQACAAEAAABWAPn/AQACAAEAAABWAPv/AQACAAEAAABWAPz/AQACAAEAAABWAP3/AQACAAEAAABWAP7/AQACAAEAAABWAP//AQACAAEAAABWAAAAAQACAAEAAABWAAEAAQACAAEAAABWAAIAAQACAAEAAABWAAMAAQACAAEAAABWAAQAAQACAAEAAABWAAUAAQACAAEAAABWAAYAAQACAAEAAABWAAcAAQACAAEAAABWAAgAAQACAAEAAABWAAkAAQACAAEAAABWAAoAAQACAAEAAABWAAsAAQACAAEAAABbAPX/AQABAAAAAABbAPb/AQABAAEAAABbAPf/AQABAAEAAABbAPj/AQABAAEAAABbAPn/AQABAAEAAABbAPr/AQABAAEAAABbAPv/AQABAAEAAABbAPz/AQABAAEAAABbAP3/AQABAAEAAABbAP7/AQABAAEAAABbAP//AQABAAEAAABbAAAAAQABAAEAAABbAAEAAQABAAEAAABbAAIAAQABAAEAAABbAAMAAQABAAEAAABbAAQAAQABAAEAAABbAAUAAQABAAEAAABbAAYAAQABAAEAAABbAAcAAQABAAEAAABbAAgAAQABAAEAAABbAAkAAQABAAEAAABbAAoAAQABAAEAAABbAAsAAQABAAEAAABcAPX/AQAAAAAAAABcAPb/AQACAAMAAABcAPf/AQACAAMAAABcAPj/AQACAAMAAABcAPn/AQACAAMAAABcAPr/AQACAAMAAABcAPv/AQACAAMAAABcAPz/AQACAAMAAABcAP3/AQACAAMAAABcAP7/AQACAAMAAABcAP//AQACAAMAAABcAAAAAQACAAMAAABcAAEAAQACAAMAAABcAAIAAQACAAMAAABcAAMAAQACAAMAAABcAAQAAQACAAMAAABcAAUAAQACAAMAAABcAAYAAQACAAMAAABcAAcAAQACAAMAAABcAAgAAQACAAMAAABcAAkAAQACAAMAAABcAAoAAQACAAMAAABcAAsAAQACAAMAAABdAPX/AQAAAAAAAABdAPb/AQACAAMAAABdAPf/AQACAAMAAABdAPj/AQACAAMAAABdAPn/AQACAAMAAABdAPr/AQACAAMAAABdAPv/AQACAAMAAABdAPz/AQACAAMAAABdAP3/AQACAAMAAABdAP7/AQACAAMAAABdAP//AQACAAMAAABdAAAAAQACAAMAAABdAAEAAQACAAMAAABdAAIAAQACAAMAAABdAAMAAQACAAMAAABdAAQAAQACAAMAAABdAAUAAQACAAMAAABdAAYAAQACAAMAAABdAAcAAQACAAMAAABdAAgAAQACAAMAAABdAAkAAQACAAMAAABdAAoAAQACAAMAAABdAAsAAQACAAMAAABeAPX/AQACAAAAAABeAPb/AQACAAEAAABeAPf/AQACAAEAAABeAPj/AQACAAEAAABeAPn/AQACAAEAAABeAPr/AQACAAEAAABeAPv/AQACAAEAAABeAPz/AQACAAEAAABeAP3/AQACAAEAAABeAP7/AQACAAEAAABeAP//AQACAAEAAABeAAAAAQACAAEAAABeAAEAAQACAAEAAABeAAIAAQACAAEAAABeAAMAAQACAAEAAABeAAQAAQACAAEAAABeAAUAAQACAAEAAABeAAYAAQACAAEAAABeAAcAAQACAAEAAABeAAgAAQACAAEAAABeAAkAAQACAAEAAABeAAoAAQACAAEAAABeAAsAAQACAAEAAABjAPX/AQABAAAAAABjAPb/AQABAAEAAABjAPf/AQABAAEAAABjAPj/AQABAAEAAABjAPn/AQABAAEAAABjAPr/AQABAAEAAABjAPv/AQABAAEAAABjAPz/AQABAAEAAABjAP3/AQABAAEAAABjAP7/AQABAAEAAABjAP//AQABAAEAAABjAAAAAQABAAEAAABjAAEAAQABAAEAAABjAAIAAQABAAEAAABjAAMAAQABAAEAAABjAAQAAQABAAEAAABjAAUAAQABAAEAAABjAAYAAQABAAEAAABjAAcAAQABAAEAAABjAAgAAQABAAEAAABjAAkAAQABAAEAAABjAAoAAQABAAEAAABjAAsAAQABAAEAAABkAPX/AQAAAAAAAABkAPb/AQACAAMAAABkAPf/AQACAAMAAABkAPj/AQACAAMAAABkAPn/AQACAAMAAABkAPr/AQACAAMAAABkAPv/AQACAAMAAABkAPz/AQACAAMAAABkAP3/AQACAAMAAABkAP7/AQACAAMAAABkAP//AQACAAMAAABkAAAAAQACAAMAAABkAAEAAQACAAMAAABkAAIAAQACAAMAAABkAAMAAQACAAMAAABkAAQAAQACAAMAAABkAAUAAQACAAMAAABkAAYAAQACAAMAAABkAAcAAQACAAMAAABkAAgAAQACAAMAAABkAAkAAQACAAMAAABkAAoAAQACAAMAAABkAAsAAQACAAMAAABlAPX/AQAAAAAAAABlAPb/AQACAAMAAABlAPf/AQACAAMAAABlAPj/AQACAAMAAABlAPn/AQACAAMAAABlAPr/AQACAAMAAABlAPv/AQACAAMAAABlAPz/AQACAAMAAABlAP3/AQACAAMAAABlAP7/AQACAAMAAABlAP//AQACAAMAAABlAAAAAQACAAMAAABlAAEAAQACAAMAAABlAAIAAQACAAMAAABlAAMAAQACAAMAAABlAAQAAQACAAMAAABlAAUAAQACAAMAAABlAAYAAQACAAMAAABlAAcAAQACAAMAAABlAAgAAQACAAMAAABlAAkAAQACAAMAAABlAAoAAQACAAMAAABlAAsAAQACAAMAAABmAPX/AQACAAAAAABmAPb/AQACAAEAAABmAPf/AQACAAEAAABmAPj/AQACAAEAAABmAPn/AQACAAEAAABmAPr/AQACAAEAAABmAPv/AQACAAEAAABmAPz/AQACAAEAAABmAP3/AQACAAEAAABmAP7/AQACAAEAAABmAP//AQACAAEAAABmAAAAAQACAAEAAABmAAEAAQACAAEAAABmAAIAAQACAAEAAABmAAMAAQACAAEAAABmAAQAAQACAAEAAABmAAUAAQACAAEAAABmAAYAAQACAAEAAABmAAcAAQACAAEAAABmAAgAAQACAAEAAABmAAkAAQACAAEAAABmAAoAAQACAAEAAABmAAsAAQACAAEAAABrAPX/AQABAAAAAABrAPb/AQABAAEAAABrAPf/AQABAAEAAABrAPj/AQABAAEAAABrAPn/AQABAAEAAABrAPr/AQABAAEAAABrAPv/AQABAAEAAABrAPz/AQABAAEAAABrAP3/AQABAAEAAABrAP7/AQABAAEAAABrAP//AQABAAEAAABrAAAAAQABAAEAAABrAAEAAQABAAEAAABrAAIAAQABAAEAAABrAAMAAQABAAEAAABrAAQAAQABAAEAAABrAAUAAQABAAEAAABrAAYAAQABAAEAAABrAAcAAQABAAEAAABrAAgAAQABAAEAAABrAAkAAQABAAEAAABrAAoAAQABAAEAAABrAAsAAQABAAEAAABsAPX/AQAAAAAAAABsAPb/AQACAAMAAABsAPf/AQACAAMAAABsAPj/AQACAAMAAABsAPn/AQACAAMAAABsAPr/AQACAAMAAABsAPv/AQACAAMAAABsAPz/AQACAAMAAABsAP3/AQACAAMAAABsAP7/AQACAAMAAABsAP//AQACAAMAAABsAAAAAQACAAMAAABsAAEAAQACAAMAAABsAAIAAQACAAMAAABsAAMAAQACAAMAAABsAAQAAQACAAMAAABsAAUAAQACAAMAAABsAAYAAQACAAMAAABsAAcAAQACAAMAAABsAAgAAQACAAMAAABsAAkAAQACAAMAAABsAAoAAQACAAMAAABsAAsAAQACAAMAAABtAPX/AQAAAAAAAABtAPb/AQACAAMAAABtAPf/AQACAAMAAABtAPj/AQACAAMAAABtAPn/AQACAAMAAABtAPr/AQACAAMAAABtAPv/AQACAAMAAABtAPz/AQACAAMAAABtAP3/AQACAAMAAABtAP7/AQACAAMAAABtAP//AQACAAMAAABtAAAAAQACAAMAAABtAAEAAQACAAMAAABtAAIAAQACAAMAAABtAAMAAQACAAMAAABtAAQAAQACAAMAAABtAAUAAQACAAMAAABtAAYAAQACAAMAAABtAAcAAQACAAMAAABtAAgAAQACAAMAAABtAAkAAQACAAMAAABtAAoAAQACAAMAAABtAAsAAQACAAMAAABWAPr/AQACAAEAAABvAPX/AQACAAAAAABvAPb/AQACAAEAAABvAPf/AQACAAEAAABvAPj/AQACAAEAAABvAPn/AQACAAEAAABvAPr/AQACAAEAAABvAPv/AQACAAEAAABvAPz/AQACAAEAAABvAP3/AQACAAEAAABvAP7/AQACAAEAAABvAP//AQACAAEAAABvAAAAAQACAAEAAABvAAEAAQACAAEAAABvAAIAAQACAAEAAABvAAMAAQACAAEAAABvAAQAAQACAAEAAABvAAUAAQACAAEAAABvAAYAAQACAAEAAABvAAcAAQACAAEAAABvAAgAAQACAAEAAABvAAkAAQACAAEAAABvAAoAAQACAAEAAABvAAsAAQACAAEAAABuAPX/AQAAAAAAAABuAPb/AQACAAMAAABuAPf/AQACAAMAAABuAPj/AQACAAMAAABuAPn/AQACAAMAAABuAPr/AQACAAMAAABuAPv/AQACAAMAAABuAPz/AQACAAMAAABuAP3/AQACAAMAAABuAP7/AQACAAMAAABuAP//AQACAAMAAABuAAAAAQACAAMAAABuAAEAAQACAAMAAABuAAIAAQACAAMAAABuAAMAAQACAAMAAABuAAQAAQACAAMAAABuAAUAAQACAAMAAABuAAYAAQACAAMAAABuAAcAAQACAAMAAABuAAgAAQACAAMAAABuAAkAAQACAAMAAABuAAoAAQACAAMAAABuAAsAAQACAAMAAABtAPP/AQAFAAMAAABsAPL/AQACAAMAAABsAPP/AQACAAMAAABsAPT/AQACAAMAAABtAPT/AQACAAMAAABuAPT/AQACAAMAAABuAPP/AQACAAMAAABuAPL/AQACAAMAAABtAPL/AQACAAMAAAA=")
tile_set = SubResource("TileSet_fr78a")
metadata/_edit_lock_ = true

[node name="EnemyTML" type="TileMapLayer" parent="."]
visible = false
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAUAP7/AAAEAAMAAAAUAP//AAAEAAMAAAAUAPT/AAAEAAMAAAAUAPX/AAAEAAMAAAA4APP/AAAEAAMAAAA4APT/AAAEAAMAAABEAPP/AAAEAAMAAABEAPT/AAAEAAMAAABSAPP/AAAEAAMAAABSAPT/AAAEAAMAAABXAPP/AAAEAAMAAABXAPT/AAAEAAMAAABiAPP/AAAEAAMAAABiAPT/AAAEAAMAAABnAPP/AAAEAAMAAABnAPT/AAAEAAMAAAAEAPT/AAAEAAMAAAAEAPX/AAAEAAMAAAA=")
tile_set = SubResource("TileSet_3b8sh")

[node name="Player" parent="." instance=ExtResource("2_ba1x8")]
position = Vector2(384, 592)
metadata/_edit_group_ = true

[node name="Sprite2D" parent="Player" index="0"]
material = SubResource("ShaderMaterial_3b8sh")
texture = ExtResource("8_rdk0p")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.5, 0.5)
limit_left = 0
limit_right = 7552
limit_bottom = 720
position_smoothing_speed = 15.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Intro" type="Label" parent="."]
offset_left = 155.0
offset_top = 97.0
offset_right = 668.0
offset_bottom = 251.0
theme = ExtResource("3_o7qq8")
theme_override_font_sizes/font_size = 32
text = "Virus Infiltration"

[node name="DeathBarrier" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBarrier"]
position = Vector2(3776, 752)
shape = SubResource("RectangleShape2D_iuh7d")

[node name="LoadWait" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="TeleportLock" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="LevelDoor" parent="." instance=ExtResource("10_3b8sh")]
position = Vector2(7008, -768)

[node name="VirusBlue" parent="." instance=ExtResource("13_txane")]
position = Vector2(312, -128)
SPEED = 200.0
direction = 1

[node name="VirusBlue2" parent="." instance=ExtResource("13_txane")]
position = Vector2(872, -680)
SPEED = 200.0

[node name="VirusBlue3" parent="." instance=ExtResource("13_txane")]
position = Vector2(3920, -752)
SPEED = 200.0

[node name="VirusBlue4" parent="." instance=ExtResource("13_txane")]
position = Vector2(5424, -752)
SPEED = 200.0

[node name="VirusBlue5" parent="." instance=ExtResource("13_txane")]
position = Vector2(6464, -752)
SPEED = 200.0

[node name="QRTeleport1-TR" parent="." instance=ExtResource("11_2qp8m")]
position = Vector2(672, 544)

[node name="QRTeleport1-EX" parent="." instance=ExtResource("11_2qp8m")]
position = Vector2(1440, 544)

[node name="QRTeleport2-TR" parent="." instance=ExtResource("11_2qp8m")]
position = Vector2(160, -160)

[node name="QRTeleport2-EX" parent="." instance=ExtResource("11_2qp8m")]
position = Vector2(160, -800)

[node name="UpwardStationaryBoost" parent="." instance=ExtResource("12_lvnj2")]
position = Vector2(2272, 480)

[node name="UpwardStationaryBoost2" parent="." instance=ExtResource("12_lvnj2")]
position = Vector2(1696, -800)

[node name="UpwardStationaryBoost3" parent="." instance=ExtResource("12_lvnj2")]
position = Vector2(2208, -800)

[node name="UpwardStationaryBoost4" parent="." instance=ExtResource("12_lvnj2")]
position = Vector2(2720, -800)

[node name="UpwardStationaryBoost5" parent="." instance=ExtResource("12_lvnj2")]
position = Vector2(3232, -800)

[connection signal="body_shape_entered" from="DeathBarrier" to="." method="_on_death_barrier_body_shape_entered"]
[connection signal="timeout" from="LoadWait" to="." method="_on_load_wait_timeout"]
[connection signal="body_entered" from="VirusBlue" to="." method="_on_virus_blue_body_entered"]
[connection signal="body_entered" from="VirusBlue2" to="." method="_on_virus_blue_body_entered"]
[connection signal="body_entered" from="VirusBlue3" to="." method="_on_virus_blue_body_entered"]
[connection signal="body_entered" from="VirusBlue4" to="." method="_on_virus_blue_body_entered"]
[connection signal="body_entered" from="VirusBlue5" to="." method="_on_virus_blue_body_entered"]
[connection signal="body_entered" from="QRTeleport1-TR" to="." method="_on_qr_teleport_1tr_body_entered"]
[connection signal="body_entered" from="QRTeleport1-EX" to="." method="_on_qr_teleport_1ex_body_entered"]
[connection signal="body_entered" from="QRTeleport2-TR" to="." method="_on_qr_teleport_2tr_body_entered"]
[connection signal="body_entered" from="QRTeleport2-EX" to="." method="_on_qr_teleport_2ex_body_entered"]

[editable path="Player"]
